--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "vue-modal-manager",
   "version": "0.0.0",
-  "private": true,
+  "type": "module",
+  "types": "./dist/lib/index.d.ts",
+  "main": "./dist/vue-modal-manager.cjs",
+  "module": "./dist/vue-modal-manager.esm.js",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": {
+        "default": "./dist/vue-modal-manager.js",
+        "types": "./dist/lib/index.d.ts"
+      }
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -13,6 +28,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "radix-vue": "^0.4.1",
+    "uuid": "^9.0.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -20,6 +37,7 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
     "@types/node": "^18.17.17",
+    "@types/uuid": "^9.0.5",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -32,6 +50,7 @@
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
+    "vite-plugin-dts": "^3.6.0",
     "vitest": "^0.34.4",
     "vue-tsc": "^1.8.11"
   }
