--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "radix-vue": "^0.4.1",
@@ -51,6 +54,7 @@
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
     "vite-plugin-dts": "^3.6.0",
+    "vitepress": "1.0.0-rc.20",
     "vitest": "^0.34.4",
     "vue-tsc": "^1.8.11"
   }
