--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "naive-ui": "^2.35.0",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
